--- a/app/pages/contact/contact.html
+++ b/app/pages/contact/contact.html
@@ -1,6 +1,7 @@
 <header>
     <div  ng-controller="ButtonMenuController">
-        <button class="btn-menu" ng-click="pressButton()"></button>
+
+        <button id="navicon" ng-click="pressButton()"><span></span></button>
     </div>
     <h2>Me contacter</h2>
 
